// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQBvpQTvxSWziKWz8yLhG6fw_Ht6VCUbmYjSk71z_OPQw3Fu"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQBlY8WkohoEOakUz5mpJs_L8Kj9INxY5Y94ZLf83PnFwnMJ"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQBvpQTvxSWziKWz8yLhG6fw_Ht6VCUbmYjSk71z_OPQw3Fu",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16412n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBvpQTvxSWziKWz8yLhG6fw_Ht6VCUbmYjSk71z_OPQw3Fu",
            "to": "kQBlY8WkohoEOakUz5mpJs_L8Kj9INxY5Y94ZLf83PnFwnMJ",
            "type": "internal",
            "value": 9971153000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBvpQTvxSWziKWz8yLhG6fw_Ht6VCUbmYjSk71z_OPQw3Fu",
          "to": "kQBlY8WkohoEOakUz5mpJs_L8Kj9INxY5Y94ZLf83PnFwnMJ",
          "type": "internal",
          "value": 9971153000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14189n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBlY8WkohoEOakUz5mpJs_L8Kj9INxY5Y94ZLf83PnFwnMJ",
            "to": "kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV",
            "type": "internal",
            "value": 9948495000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBlY8WkohoEOakUz5mpJs_L8Kj9INxY5Y94ZLf83PnFwnMJ",
          "to": "kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV",
          "type": "internal",
          "value": 9948495000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14199n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV",
            "to": "kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV",
            "type": "internal",
            "value": 9925819000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV",
          "to": "kQCI4pRFxPGZ6-cTCumwr9Hirkbt1_7oOrBn4ldO-7FjSedV",
          "type": "internal",
          "value": 9925819000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3365n,
      },
    ],
  },
]
`;
